Sync v0.0.16-beta release snapshot
